# testing

./: CMakeLists.txt  a.txt  allocator  allocator.cu  benchmark.cpp  cuEFIM  cuEFIM.cu  efim.cpp  efim2  efim2.cpp  idk.txt  lorem.txt  main  main.cpp  main.cu  parse.py  res.txt  stack  stack.cu  temp  test  test.cu  test.ipynb  test.py  test.txt
efim/: CMakeLists.txt
efim/src/: allocator.cuh  io.cpp  io.h  main.cu  mine.cu  mine.cuh
efim/src/old/: io.cpp  mine.cu  mine.cuh
include/: args.h  database.cuh  memory.cuh  mine.cuh  parser.h  work.cuh
old/: efim2.cpp  test.ipynb
old/efim/: CMakeLists.txt
old/efim/src/: a  allocator.cuh  main.cu
src/: args.cu  parser.cpp
